Modified build.gradle and module-info.java and also resolved unchecked usage in Tables.java file